--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-http-server",
+  "name": "http-server",
   "version": "1.0.0",
   "description": "Node.js example server starter project",
   "main": "src/index.js",
@@ -7,15 +7,25 @@
     "start": "node app4.js"
   },
   "dependencies": {
+    "dot-prop": ">=5.1.1",
     "ejs": "^3.1.10",
-    "express": "^4.17.1",
+    "express": "^4.22.1",
     "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "mixin-deep": "^1.3.2",
     "set-value": "^4.0.1",
-    "sqlite3": "",
-    "dot-prop": ">=5.1.1"
+    "sqlite3": ""
   },
-  "devDependencies": {},
-  "keywords": []
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yuta0928/webpro_06.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/yuta0928/webpro_06/issues"
+  },
+  "homepage": "https://github.com/yuta0928/webpro_06#readme"
 }
